--- a/.github/workflows/unified-agent-bottom.yml
+++ b/.github/workflows/unified-agent-bottom.yml
@@ -14,7 +14,7 @@ on:
   schedule:
     - cron: '0 */6 * * *'  # Every 6 hours: 12:00 AM, 6:00 AM, 12:00 PM, 6:00 PM UTC
   
-  # Note: Workflow auto-restarts itself after 5 minutes (see last step for 24/7 continuous operation)
+  # Note: Workflow auto-restarts itself immediately after completion (see last step for 24/7 continuous operation)
 
 concurrency:
   group: unified-agent-bottom-continuous
@@ -105,11 +105,9 @@ jobs:
             npm-debug.log*
           retention-days: 7
       
-      - name: Wait 5 minutes then restart workflow (24/7 continuous)
+      - name: Restart workflow immediately (24/7 continuous)
         if: always() && (github.event_name != 'schedule' || steps.check_running.outputs.skip != 'true')
         run: |
-          echo "⏳ Waiting 5 minutes before restarting workflow..."
-          sleep 300
           echo "🔄 Triggering workflow restart..."
           
           # Get workflow ID
